[Autofill] CVC detection.

Allow for certain number of UNKOWN fields between credit card fields.
Otherwise, we would miss some fields (CVC in most cases,) because
the detection of the fields are inter-dependent.

We can't allow for unlimited number of UNKONWN fields, because then
the name fields in the address sections may be detected as the card
holder name.

Tests:
test/135 the output was wrong, it's corrected.
test/141 the output was wrong, it's still wrong, it would need
another CL to fix the problem of the expiration date detection.
It is modified to let this CL pass the tests, but the problem is not
caused by this CL.

Fixes:
bbc.com (Desktop),
barnesandnoble.com (Desktop),
www.sky.com (Desktop),
homedepot.com, and .. .


Bug: 799990
Change-Id: Ie90bc7e33bee48e736af6783a697f680665ee3fc
Reviewed-on: https://chromium-review.googlesource.com/862698
Commit-Queue: Parastoo Geranmayeh <parastoog@google.com>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530692}
Former-commit-id: 49e494a85ddc4ccb03e120b0d16dea4507495e22