components/autofill/core/browser/credit_card_field.cc
@@ -88,6 +88,7 @@ std::unique_ptr<FormField> CreditCardField::Parse(AutofillScanner* scanner) {
   // Using 'new' to access private constructor.
   auto credit_card_field = base::WrapUnique(new CreditCardField());
   size_t saved_cursor = scanner->SaveCursor();
+  int nb_unknown_fields = 0;
 
   // Credit card fields can appear in many different orders.
   // We loop until no more credit card related fields are found, see |break| at
@@ -134,6 +135,7 @@ std::unique_ptr<FormField> CreditCardField::Parse(AutofillScanner* scanner) {
     if (!credit_card_field->type_ && LikelyCardTypeSelectField(scanner)) {
       credit_card_field->type_ = scanner->Cursor();
       scanner->Advance();
+      nb_unknown_fields = 0;
       continue;
     }
 
@@ -176,6 +178,7 @@ std::unique_ptr<FormField> CreditCardField::Parse(AutofillScanner* scanner) {
           credit_card_field->verification_ = nullptr;
         }
       } else {
+        nb_unknown_fields = 0;
         continue;
       }
     }
@@ -204,11 +207,14 @@ std::unique_ptr<FormField> CreditCardField::Parse(AutofillScanner* scanner) {
 
       current_number_field->set_credit_card_number_offset(start_index);
       credit_card_field->numbers_.push_back(current_number_field);
+      nb_unknown_fields = 0;
       continue;
     }
 
-    if (credit_card_field->ParseExpirationDate(scanner))
+    if (credit_card_field->ParseExpirationDate(scanner)) {
+      nb_unknown_fields = 0;
       continue;
+    }
 
     if (credit_card_field->expiration_month_ &&
         !credit_card_field->expiration_year_ &&
@@ -218,6 +224,24 @@ std::unique_ptr<FormField> CreditCardField::Parse(AutofillScanner* scanner) {
       return nullptr;
     }
 
+    nb_unknown_fields++;
+
+    // Since cc#/verification and expiration are inter-dependent for the final
+    // detection decision, we allow for 4 UNKONWN fields in between.
+    // We can't allow for a lot of unknown fields, because the name on address
+    // sections may sometimes be mistakenly detected as cardholder name.
+    if ((credit_card_field->verification_ ||
+         !credit_card_field->numbers_.empty() ||
+         credit_card_field->HasExpiration()) &&
+        (!credit_card_field->verification_ ||
+         credit_card_field->numbers_.empty() ||
+         !credit_card_field->HasExpiration()) &&
+        nb_unknown_fields < 4) {
+      scanner->Advance();
+      fields--;  // We continue searching in the same credit card section, but
+                 // no more field is identified.
+      continue;
+    }
     break;
   }
 
